--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,6 @@
                     <a href="index.html"><img src="/images/cendien_corp_logo.jpg" alt="Cendien Corporation Logo" id="company-logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html" class="nav-link">Home</a>
                     <span class="nav-current-page">RFP Analyzer</span>
                     <a href="resume-generator.html" class="nav-link">AI Resume Generator</a>
                 </nav>
@@ -326,7 +325,7 @@
                     <div class="form-group">
                         <label for="rfpIndividualPromptTextarea">Prompt for Selected Section:</label>
                         <textarea id="rfpIndividualPromptTextarea" name="rfpIndividualPromptTextarea" rows="10" style="font-size: 0.85rem; line-height: 1.4;"></textarea>
-                        <small>Edit the instruction for how the AI should generate this specific section of the analysis. The AI will still receive the full RFP text.</small>
+                        <small>Edit the Prompt for how the AI should generate this specific section of the analysis. The AI will still receive the full RFP text.</small>
                     </div>
 
                     <button id="save-current-prompt-button" class="btn btn-primary" style="margin-top: 1rem;">Save Current Section Prompt</button>
