--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                             <button class="tab-link" onclick="openViewTab(event, 'view-questions-tab')">Questions</button>
                             <button class="tab-link" onclick="openViewTab(event, 'view-deadlines-tab')">Deadlines & Format</button>
                             <button class="tab-link" onclick="openViewTab(event, 'view-requirements-tab')">Requirements</button>
-                            <button class="tab-link" onclick="openViewTab(event, 'view-stakeholders-tab')">Stakeholders</button>
+                            <button class="tab-link" onclick="openViewTab(event, 'view-stakeholders-tab')">Stakeholders/Contacts</button>
                             <button class="tab-link" onclick="openViewTab(event, 'view-risks-tab')">Risks</button>
                             <button class="tab-link" onclick="openViewTab(event, 'view-registration-tab')">Registration</button>
                             <button class="tab-link" onclick="openViewTab(event, 'view-licenses-tab')">Licenses</button>
