--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <nav>
                     <span class="nav-current-page">RFP Analyzer</span>
-                    <a href="resume-generator.html" class="nav-link">AI Resume Generator</a>
+                    <a href="resume-generator.html" class="nav-link">AI Resume Generator(Beta)</a>
                 </nav>
                 <div class="settings-icon-container">
                     <button id="open-prompt-settings-modal-button" class="action-icon" title="Edit AI Prompts">
