--- a/public/foia-analysis.html
+++ b/public/foia-analysis.html
@@ -145,7 +145,7 @@
                         </div>
                         <div class="form-group">
                             <label for="foiaType">Document Type (e.g., Request, Response, Records):</label>
-                             <input type="text" id="foiaType" name="foiaType" placeholder="e.g., FOIA Request, Agency Response">
+                             <input type="text" id="foiaType" name="foiaType" placeholder="FOIA Request, Agency Response, ...">
                         </div>
                         <div class="form-group">
                             <label for="submittedByFoia">Person Submitting / Analyzing:</label>
